# oep

./: .gitignore  CMakeLists.txt  README.md  Readme.md
data/: README.md
data/maps/: arequipa.osm
src/: main.cpp
src/algorithms/: VehicleProfile.cpp  VehicleProfile.h
src/algorithms/factories/: AlgorithmFactory.cpp  AlgorithmFactory.h  TspAlgorithmFactory.cpp  TspAlgorithmFactory.h  VehicleProfileFactory.cpp  VehicleProfileFactory.h
src/algorithms/pathfinding/: AStarAlgorithm.cpp  AStarAlgorithm.h  DijkstraAlgorithm.cpp  DijkstraAlgorithm.h
src/algorithms/tsp/: IGAlgorithm.cpp  IGAlgorithm.h  IGNAlgorithm.cpp  IGNAlgorithm.h  ILSBAlgorithm.cpp  ILSBAlgorithm.h  RandomTSPAlgorithm.cpp  RandomTSPAlgorithm.h  TspMatrix.cpp  TspMatrix.h
src/core/entities/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
src/core/interfaces/: IPathfindingAlgorithm.h  ITspAlgorithm.h
src/core/value_objects/: Coordinate.h  Distance.h  RouteSegment.h
src/infraestructure/loaders/: BinaryGraphLoader.cpp  BinaryGraphLoader.h  BinaryGraphSerializer.cpp  BinaryGraphSerializer.h  OSMGraphLoader.cpp  OSMGraphLoader.h
src/services/: GraphService.cpp  GraphService.h  PathfindingService.cpp  PathfindingService.h  TspService.cpp  TspService.h
src/ui/: ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  ResultsPanel.cpp  ResultsPanel.h  mainwindow.cpp  mainwindow.h
src/utils/exceptions/: BaseException.h  GraphException.h  TspException.h
tests/: CMakeLists.txt
tests/unit/: DijkstraTest.cpp  GraphTests.cpp  IGNAlgorithmTest.cpp  TestRunner.cpp  TspMatrixTest.cpp
